Practica03/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : metodos VOID MAIN '(' ')' '{' sentencias '}'

   2  metodos : metodos metodo
   3          |

   4  metodo : funcion
   5         | declaracionVariable ';'

   6  funcion : tipoSimple ID '(' parametro ')' '{' cuerpo '}'

   7  llamadaFuncion : ID '(' expresiones ')'

   8  tipoParametro : ID
   9                | CTE_ENTERA
  10                | CTE_REAL

  11  parametro : parametro ',' tipoSimple ID
  12            | tipoSimple ID
  13            |

  14  cuerpo : sentencias retorno
  15         |

  16  retorno : RETURN expresion ';'
  17          |

  18  sentencias : sentencias sentencia
  19             | sentencia

  20  sentencia : llamadaVariable
  21            | declaracionVariable ';'
  22            | llamadaVariable '=' expresion ';'
  23            | declaracionVariable '=' expresion ';'
  24            | ID '.' ID '=' expresion ';'
  25            | WHILE '(' expresion ')' '{' sentencias '}'
  26            | IF '(' expresion ')' '{' sentencias '}'
  27            | IF '(' expresion ')' sentencia
  28            | ELSE '{' sentencias '}'
  29            | ELSE sentencia
  30            | WRITE expresiones ';'
  31            | READ expresiones ';'
  32            | ID '(' parametroLlamada ')' ';'
  33            | llamadaFuncion ';'

  34  parametroLlamada : parametroLlamada ',' tipoParametro
  35                   |

  36  estructura : STRUCT '{' campos '}' ID

  37  campos : campos estructura
  38         | campos declaracionVariable ';'
  39         | declaracionVariable ';'
  40         | estructura

  41  llamadaVariable : identificador
  42                  | identificador '[' expresiones ']'
  43                  | identificador '[' expresiones ']' '[' expresiones ']'

  44  declaracionVariable : tipoSimple identificador
  45                      | tipoSimple '[' expresiones ']' identificador
  46                      | tipoSimple '[' expresiones ']' '[' expresiones ']' identificador
  47                      | estructura ';'

  48  expresiones : expresiones ',' expresion
  49              | expresion

  50  expresion : llamadaVariable
  51            | CTE_ENTERA
  52            | CTE_REAL
  53            | CTE_CARACTER
  54            | expresion '+' expresion
  55            | expresion '*' expresion
  56            | expresion '/' expresion
  57            | expresion '-' expresion
  58            | expresion '%' expresion
  59            | expresion '>' expresion
  60            | expresion '<' expresion
  61            | expresion MAYORIGUALQUE expresion
  62            | expresion MENORIGUALQUE expresion
  63            | expresion DISTINTO expresion
  64            | expresion IGUALDAD expresion
  65            | expresion Y expresion
  66            | expresion O expresion
  67            | expresion '.' expresion
  68            | '-' expresion
  69            | '!' expresion
  70            | '(' expresion ')'
  71            | '(' tipoSimple ')' expresion
  72            | llamadaFuncion

  73  identificador : identificador ',' ID
  74                | ID

  75  tipoSimple : VOID
  76             | INT
  77             | DOUBLE
  78             | CHAR

state 0
	$accept : . programa $end  (0)
	metodos : .  (3)

	.  reduce 3

	programa  goto 1
	metodos  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : metodos . VOID MAIN '(' ')' '{' sentencias '}'  (1)
	metodos : metodos . metodo  (2)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 7
	.  error

	metodo  goto 8
	funcion  goto 9
	declaracionVariable  goto 10
	tipoSimple  goto 11
	estructura  goto 12


state 3
	tipoSimple : INT .  (76)

	.  reduce 76


state 4
	tipoSimple : DOUBLE .  (77)

	.  reduce 77


state 5
	tipoSimple : CHAR .  (78)

	.  reduce 78


state 6
	estructura : STRUCT . '{' campos '}' ID  (36)

	'{'  shift 13
	.  error


state 7
	programa : metodos VOID . MAIN '(' ')' '{' sentencias '}'  (1)
	tipoSimple : VOID .  (75)

	MAIN  shift 14
	ID  reduce 75
	'['  reduce 75


state 8
	metodos : metodos metodo .  (2)

	.  reduce 2


state 9
	metodo : funcion .  (4)

	.  reduce 4


state 10
	metodo : declaracionVariable . ';'  (5)

	';'  shift 15
	.  error


state 11
	funcion : tipoSimple . ID '(' parametro ')' '{' cuerpo '}'  (6)
	declaracionVariable : tipoSimple . identificador  (44)
	declaracionVariable : tipoSimple . '[' expresiones ']' identificador  (45)
	declaracionVariable : tipoSimple . '[' expresiones ']' '[' expresiones ']' identificador  (46)

	ID  shift 16
	'['  shift 17
	.  error

	identificador  goto 18


state 12
	declaracionVariable : estructura . ';'  (47)

	';'  shift 19
	.  error


state 13
	estructura : STRUCT '{' . campos '}' ID  (36)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 20
	.  error

	declaracionVariable  goto 21
	tipoSimple  goto 22
	estructura  goto 23
	campos  goto 24


state 14
	programa : metodos VOID MAIN . '(' ')' '{' sentencias '}'  (1)

	'('  shift 25
	.  error


state 15
	metodo : declaracionVariable ';' .  (5)

	.  reduce 5


state 16
	funcion : tipoSimple ID . '(' parametro ')' '{' cuerpo '}'  (6)
	identificador : ID .  (74)

	'('  shift 26
	';'  reduce 74
	','  reduce 74


state 17
	declaracionVariable : tipoSimple '[' . expresiones ']' identificador  (45)
	declaracionVariable : tipoSimple '[' . expresiones ']' '[' expresiones ']' identificador  (46)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresiones  goto 35
	expresion  goto 36
	llamadaVariable  goto 37
	identificador  goto 38


state 18
	declaracionVariable : tipoSimple identificador .  (44)
	identificador : identificador . ',' ID  (73)

	','  shift 39
	'='  reduce 44
	';'  reduce 44


state 19
	declaracionVariable : estructura ';' .  (47)

	.  reduce 47


state 20
	tipoSimple : VOID .  (75)

	.  reduce 75


state 21
	campos : declaracionVariable . ';'  (39)

	';'  shift 40
	.  error


state 22
	declaracionVariable : tipoSimple . identificador  (44)
	declaracionVariable : tipoSimple . '[' expresiones ']' identificador  (45)
	declaracionVariable : tipoSimple . '[' expresiones ']' '[' expresiones ']' identificador  (46)

	ID  shift 41
	'['  shift 17
	.  error

	identificador  goto 18


state 23
	campos : estructura .  (40)
	declaracionVariable : estructura . ';'  (47)

	';'  shift 19
	INT  reduce 40
	DOUBLE  reduce 40
	CHAR  reduce 40
	STRUCT  reduce 40
	VOID  reduce 40
	'}'  reduce 40


state 24
	estructura : STRUCT '{' campos . '}' ID  (36)
	campos : campos . estructura  (37)
	campos : campos . declaracionVariable ';'  (38)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 20
	'}'  shift 42
	.  error

	declaracionVariable  goto 43
	tipoSimple  goto 22
	estructura  goto 44


state 25
	programa : metodos VOID MAIN '(' . ')' '{' sentencias '}'  (1)

	')'  shift 45
	.  error


state 26
	funcion : tipoSimple ID '(' . parametro ')' '{' cuerpo '}'  (6)
	parametro : .  (13)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	VOID  shift 20
	')'  reduce 13
	','  reduce 13

	tipoSimple  goto 46
	parametro  goto 47


state 27
	expresion : CTE_ENTERA .  (51)

	.  reduce 51


state 28
	expresion : CTE_REAL .  (52)

	.  reduce 52


state 29
	expresion : CTE_CARACTER .  (53)

	.  reduce 53


state 30
	llamadaFuncion : ID . '(' expresiones ')'  (7)
	identificador : ID .  (74)

	'('  shift 48
	Y  reduce 74
	O  reduce 74
	MAYORIGUALQUE  reduce 74
	MENORIGUALQUE  reduce 74
	DISTINTO  reduce 74
	IGUALDAD  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	'['  reduce 74
	']'  reduce 74
	'.'  reduce 74
	')'  reduce 74
	';'  reduce 74
	','  reduce 74


state 31
	expresion : '!' . expresion  (69)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 49
	llamadaVariable  goto 37
	identificador  goto 38


state 32
	expresion : '-' . expresion  (68)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 50
	llamadaVariable  goto 37
	identificador  goto 38


state 33
	expresion : '(' . expresion ')'  (70)
	expresion : '(' . tipoSimple ')' expresion  (71)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	VOID  shift 20
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	tipoSimple  goto 51
	llamadaFuncion  goto 34
	expresion  goto 52
	llamadaVariable  goto 37
	identificador  goto 38


state 34
	expresion : llamadaFuncion .  (72)

	.  reduce 72


state 35
	declaracionVariable : tipoSimple '[' expresiones . ']' identificador  (45)
	declaracionVariable : tipoSimple '[' expresiones . ']' '[' expresiones ']' identificador  (46)
	expresiones : expresiones . ',' expresion  (48)

	']'  shift 53
	','  shift 54
	.  error


state 36
	expresiones : expresion .  (49)
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)

	Y  shift 55
	O  shift 56
	MAYORIGUALQUE  shift 57
	MENORIGUALQUE  shift 58
	DISTINTO  shift 59
	IGUALDAD  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'.'  shift 68
	']'  reduce 49
	')'  reduce 49
	';'  reduce 49
	','  reduce 49


state 37
	expresion : llamadaVariable .  (50)

	.  reduce 50


38: shift/reduce conflict (shift 39, reduce 41) on ','
state 38
	llamadaVariable : identificador .  (41)
	llamadaVariable : identificador . '[' expresiones ']'  (42)
	llamadaVariable : identificador . '[' expresiones ']' '[' expresiones ']'  (43)
	identificador : identificador . ',' ID  (73)

	'['  shift 69
	','  shift 39
	READ  reduce 41
	WRITE  reduce 41
	WHILE  reduce 41
	IF  reduce 41
	ELSE  reduce 41
	INT  reduce 41
	DOUBLE  reduce 41
	CHAR  reduce 41
	STRUCT  reduce 41
	RETURN  reduce 41
	VOID  reduce 41
	ID  reduce 41
	Y  reduce 41
	O  reduce 41
	MAYORIGUALQUE  reduce 41
	MENORIGUALQUE  reduce 41
	DISTINTO  reduce 41
	IGUALDAD  reduce 41
	'='  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	']'  reduce 41
	'.'  reduce 41
	')'  reduce 41
	'}'  reduce 41
	';'  reduce 41


state 39
	identificador : identificador ',' . ID  (73)

	ID  shift 70
	.  error


state 40
	campos : declaracionVariable ';' .  (39)

	.  reduce 39


state 41
	identificador : ID .  (74)

	.  reduce 74


state 42
	estructura : STRUCT '{' campos '}' . ID  (36)

	ID  shift 71
	.  error


state 43
	campos : campos declaracionVariable . ';'  (38)

	';'  shift 72
	.  error


state 44
	campos : campos estructura .  (37)
	declaracionVariable : estructura . ';'  (47)

	';'  shift 19
	INT  reduce 37
	DOUBLE  reduce 37
	CHAR  reduce 37
	STRUCT  reduce 37
	VOID  reduce 37
	'}'  reduce 37


state 45
	programa : metodos VOID MAIN '(' ')' . '{' sentencias '}'  (1)

	'{'  shift 73
	.  error


state 46
	parametro : tipoSimple . ID  (12)

	ID  shift 74
	.  error


state 47
	funcion : tipoSimple ID '(' parametro . ')' '{' cuerpo '}'  (6)
	parametro : parametro . ',' tipoSimple ID  (11)

	')'  shift 75
	','  shift 76
	.  error


state 48
	llamadaFuncion : ID '(' . expresiones ')'  (7)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresiones  goto 77
	expresion  goto 36
	llamadaVariable  goto 37
	identificador  goto 38


state 49
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)
	expresion : '!' expresion .  (69)

	'.'  shift 68
	Y  reduce 69
	O  reduce 69
	MAYORIGUALQUE  reduce 69
	MENORIGUALQUE  reduce 69
	DISTINTO  reduce 69
	IGUALDAD  reduce 69
	'>'  reduce 69
	'<'  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69
	'%'  reduce 69
	']'  reduce 69
	')'  reduce 69
	';'  reduce 69
	','  reduce 69


state 50
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)
	expresion : '-' expresion .  (68)

	'.'  shift 68
	Y  reduce 68
	O  reduce 68
	MAYORIGUALQUE  reduce 68
	MENORIGUALQUE  reduce 68
	DISTINTO  reduce 68
	IGUALDAD  reduce 68
	'>'  reduce 68
	'<'  reduce 68
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	']'  reduce 68
	')'  reduce 68
	';'  reduce 68
	','  reduce 68


state 51
	expresion : '(' tipoSimple . ')' expresion  (71)

	')'  shift 78
	.  error


state 52
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)
	expresion : '(' expresion . ')'  (70)

	Y  shift 55
	O  shift 56
	MAYORIGUALQUE  shift 57
	MENORIGUALQUE  shift 58
	DISTINTO  shift 59
	IGUALDAD  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'.'  shift 68
	')'  shift 79
	.  error


state 53
	declaracionVariable : tipoSimple '[' expresiones ']' . identificador  (45)
	declaracionVariable : tipoSimple '[' expresiones ']' . '[' expresiones ']' identificador  (46)

	ID  shift 41
	'['  shift 80
	.  error

	identificador  goto 81


state 54
	expresiones : expresiones ',' . expresion  (48)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 82
	llamadaVariable  goto 37
	identificador  goto 38


state 55
	expresion : expresion Y . expresion  (65)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 83
	llamadaVariable  goto 37
	identificador  goto 38


state 56
	expresion : expresion O . expresion  (66)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 84
	llamadaVariable  goto 37
	identificador  goto 38


state 57
	expresion : expresion MAYORIGUALQUE . expresion  (61)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 85
	llamadaVariable  goto 37
	identificador  goto 38


state 58
	expresion : expresion MENORIGUALQUE . expresion  (62)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 86
	llamadaVariable  goto 37
	identificador  goto 38


state 59
	expresion : expresion DISTINTO . expresion  (63)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 87
	llamadaVariable  goto 37
	identificador  goto 38


state 60
	expresion : expresion IGUALDAD . expresion  (64)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 88
	llamadaVariable  goto 37
	identificador  goto 38


state 61
	expresion : expresion '>' . expresion  (59)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 89
	llamadaVariable  goto 37
	identificador  goto 38


state 62
	expresion : expresion '<' . expresion  (60)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 90
	llamadaVariable  goto 37
	identificador  goto 38


state 63
	expresion : expresion '+' . expresion  (54)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 91
	llamadaVariable  goto 37
	identificador  goto 38


state 64
	expresion : expresion '-' . expresion  (57)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 92
	llamadaVariable  goto 37
	identificador  goto 38


state 65
	expresion : expresion '*' . expresion  (55)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 93
	llamadaVariable  goto 37
	identificador  goto 38


state 66
	expresion : expresion '/' . expresion  (56)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 94
	llamadaVariable  goto 37
	identificador  goto 38


state 67
	expresion : expresion '%' . expresion  (58)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 95
	llamadaVariable  goto 37
	identificador  goto 38


state 68
	expresion : expresion '.' . expresion  (67)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 96
	llamadaVariable  goto 37
	identificador  goto 38


state 69
	llamadaVariable : identificador '[' . expresiones ']'  (42)
	llamadaVariable : identificador '[' . expresiones ']' '[' expresiones ']'  (43)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresiones  goto 97
	expresion  goto 36
	llamadaVariable  goto 37
	identificador  goto 38


state 70
	identificador : identificador ',' ID .  (73)

	.  reduce 73


state 71
	estructura : STRUCT '{' campos '}' ID .  (36)

	.  reduce 36


state 72
	campos : campos declaracionVariable ';' .  (38)

	.  reduce 38


state 73
	programa : metodos VOID MAIN '(' ')' '{' . sentencias '}'  (1)

	READ  shift 98
	WRITE  shift 99
	WHILE  shift 100
	IF  shift 101
	ELSE  shift 102
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 20
	ID  shift 103
	.  error

	sentencias  goto 104
	declaracionVariable  goto 105
	tipoSimple  goto 22
	llamadaFuncion  goto 106
	sentencia  goto 107
	llamadaVariable  goto 108
	estructura  goto 12
	identificador  goto 38


state 74
	parametro : tipoSimple ID .  (12)

	.  reduce 12


state 75
	funcion : tipoSimple ID '(' parametro ')' . '{' cuerpo '}'  (6)

	'{'  shift 109
	.  error


state 76
	parametro : parametro ',' . tipoSimple ID  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	VOID  shift 20
	.  error

	tipoSimple  goto 110


state 77
	llamadaFuncion : ID '(' expresiones . ')'  (7)
	expresiones : expresiones . ',' expresion  (48)

	')'  shift 111
	','  shift 54
	.  error


state 78
	expresion : '(' tipoSimple ')' . expresion  (71)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresion  goto 112
	llamadaVariable  goto 37
	identificador  goto 38


state 79
	expresion : '(' expresion ')' .  (70)

	.  reduce 70


state 80
	declaracionVariable : tipoSimple '[' expresiones ']' '[' . expresiones ']' identificador  (46)

	CTE_ENTERA  shift 27
	CTE_REAL  shift 28
	CTE_CARACTER  shift 29
	ID  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	llamadaFuncion  goto 34
	expresiones  goto 113
	expresion  goto 36
	llamadaVariable  goto 37
	identificador  goto 38


state 81
	declaracionVariable : tipoSimple '[' expresiones ']' identificador .  (45)
	identificador : identificador . ',' ID  (73)

	','  shift 39
	'='  reduce 45
	';'  reduce 45


state 82
	expresiones : expresiones ',' expresion .  (48)
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)

	Y  shift 55
	O  shift 56
	MAYORIGUALQUE  shift 57
	MENORIGUALQUE  shift 58
	DISTINTO  shift 59
	IGUALDAD  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'.'  shift 68
	']'  reduce 48
	')'  reduce 48
	';'  reduce 48
	','  reduce 48


state 83
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion Y expresion .  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)

	MAYORIGUALQUE  shift 57
	MENORIGUALQUE  shift 58
	DISTINTO  shift 59
	IGUALDAD  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'.'  shift 68
	Y  reduce 65
	O  reduce 65
	']'  reduce 65
	')'  reduce 65
	';'  reduce 65
	','  reduce 65


state 84
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion O expresion .  (66)
	expresion : expresion . '.' expresion  (67)

	MAYORIGUALQUE  shift 57
	MENORIGUALQUE  shift 58
	DISTINTO  shift 59
	IGUALDAD  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'.'  shift 68
	Y  reduce 66
	O  reduce 66
	']'  reduce 66
	')'  reduce 66
	';'  reduce 66
	','  reduce 66


state 85
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion MAYORIGUALQUE expresion .  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)

	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'.'  shift 68
	Y  reduce 61
	O  reduce 61
	MAYORIGUALQUE  reduce 61
	MENORIGUALQUE  reduce 61
	DISTINTO  reduce 61
	IGUALDAD  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	']'  reduce 61
	')'  reduce 61
	';'  reduce 61
	','  reduce 61


state 86
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '-' expresion  (57)
	expresion : expresion . '%' expresion  (58)
	expresion : expresion . '>' expresion  (59)
	expresion : expresion . '<' expresion  (60)
	expresion : expresion . MAYORIGUALQUE expresion  (61)
	expresion : expresion . MENORIGUALQUE expresion  (62)
	expresion : expresion MENORIGUALQUE expresion .  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . IGUALDAD expresion  (64)
	expresion : expresion . Y expresion  (65)
	expresion : expresion . O expresion  (66)
	expresion : expresion . '.' expresion  (67)

	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'.'  shift 68
	Y  reduce 62
	O  reduce 62
	MAYORIGUALQUE  reduce 62
	MENORIGUALQUE  reduce 62
	DISTINTO  reduce 62
	IGUALDAD  reduce 62
	'>'  reduce 62
	'<'  reduce 62
	']'  reduce 62
	')'  reduce 62
	';'  reduce 62
	','  reduce 62

